fix: keep spacing after loosing focus

--- a/packages/search/SearchCombo.module.scss
+++ b/packages/search/SearchCombo.module.scss
@@ -27,7 +27,8 @@
     transition: opacity 0.33s;
   }
   
-  :global(.omnisearch-bar):focus-within :global(.omnisearch-field-icon){
+  :global(.omnisearch-bar):focus-within :global(.omnisearch-field-icon),
+  &.open :global(.omnisearch-field-icon) {
     margin-left: calc($spacing-x * 2);
   }
 
